# synth-lab

./: .coverage  .dockerignore  .env.e2e  .env.example  .gitignore  .markdownlint.json  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.backend  HOOKS_SETUP_COMPLETE.md  Makefile  NOTE-PHASES-7-9.md  README.md  TEST_SUITE_SUMMARY.md  clear_region_cache.py  debug_region_analysis.py  deprecated-elements-analysis.md  docker-compose.e2e.yml  first-lab.ipynb  nixpacks.toml  pyproject.toml  pytest.ini  railway.toml  resize_images.py
.claude/: settings.local.json
.claude/hooks/: QUICKSTART.md  README.md  config.sh  post-commit  pre-commit  pre-push  pull-request
.claude/skills/: update-tests.md
.githooks/: check-test-coverage.sh  post-commit  pre-commit  pre-push
.github/workflows/: deploy.yml  docs-validation.yml  test-coverage-analysis.yml  tests-e2e.yml  tests-fast.yml  tests-nightly.yml  tests-pr.yml
.specify/memory/: constitution.md
data/: action_catalog.json
data/config/: README.md  custom_distribution.json  ibge_distributions.json  interests_hobbies.json  occupations_structured.json  scenarios.json
data/schemas/: synth-schema-cleaned.json  synth-schema-v1.json  synth-schema.json
data/synths_old/: 00j05y.json  04euce.json  07uz63.json  0oe3xk.json  0r0v0h.json  0yh9nt.json  174p1o.json  1je4yw.json  1q514d.json  1r6fi0.json  1rhqml.json  1rydjt.json  1xwfks.json  29cyhh.json  2bjqz7.json  2cahjw.json  2m5ys3.json  2p7llc.json  2t8oba.json  2u3c8p.json  2wfe0g.json  2xfw8x.json  2yruh8.json  35irgl.json  366ttx.json  38o9q9.json  3dpj9g.json  3hcabr.json  3ikhjz.json  3ilvkk.json  42ri4j.json  47rh40.json  4g0t4q.json  4hwijl.json  4j51am.json  4ky55g.json  4ydepw.json  4zaw9g.json  51no9v.json  56hnku.json  (+214 more)
data/topic_guides/: interview-guide.md
data/traces/: basic_conversation.trace.json  comprehensive_demo.trace.json
data/transcripts/: fhynws_20251216_165331.json  fhynws_20251216_170143.json  fhynws_20251216_171520.json  nhsj0c_20251216_171655.json  nhsj0d_20251217_212625.json  nhsj0d_20251217_213020.json
docker/: docker-compose.postgres.yml
docs/: 6-pager-synth-lab.md  6-pager-synth-lab_v2.md  AUTO_UPDATE_DOCS_README.md  DOCUMENTATION_MAINTENANCE.md  MANUAL_TEST_GUIDE.md  TESTING.md  api.md  arquitetura.md  arquitetura_front.md  auto-update-tests-guide.md  avatar_coverage_report.md  cli.md  database_model.md  features.md  latent-traits-diagram.md  maintaining-tests-with-claude.md  railway-environments.md  requisitos.md  services.md  simulation-formulas-reference.md  synth-attributes-reference.md  template_feat_scorecard.md  testing-e2e.md  testing-strategy.md  to_be_deprecated.md  user_journeys.md
docs/guides/: simulation-testing-guide.md  test_simulation.py  test_ux_workflow.py
docs/trace_visualizer/: BDD_ACCEPTANCE_TESTS.md  MANUAL_TEST_RESULTS.md  SESSION_SUMMARY.md
examples/research_agentic/: demo_interview.py
examples/trace_visualizer/: basic_conversation.py  comprehensive_demo.py  interview_trace_demo.py
frontend/: .coverage  .dockerignore  CLAUDE.md  Dockerfile  E2E_TESTING.md  index.html  nixpacks.toml  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
frontend/.claude/: ui-memory.md
frontend/src/: App.tsx  globals.css
logui/: details.js  index.html  styles.css  trace-renderer.js  waterfall.js
scripts/: README_INSIGHTS.md  REFACTOR_README.md  analyze_test_coverage.py  auto-update-docs.sh  auto-update-tests.sh  compose-e2e.sh  docker-entrypoint-backend.sh  gen_synth.py  init_db.py  install-hooks.sh  migrate_data_to_postgres.py  migrate_to_sqlite.py  pre-push-hook.sh  refactor_architecture.sh  regenerate_insights.py  setup_test_db.py  start_api.sh  test_executive_summary_v16.py  test_exploration_api.py  test_sse_e2e.py  validate_ui.py
specs/: analysis-pre-work.md  api-pre-work-service-and-database.md  api-pre-work.md  spec.md
specs/001-analysis-tabs-refactor/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/001-experiment-materials/: data-model.md  (+5 more)
tests/: AUTO_SETUP_GUIDE.md  README.md  README_TEST_SETUP.md  conftest.py
(+868 files in other folders)
