[project]
name = "synth-lab"
version = "1.0.0"
description = "Gerador de personas sintéticas (Synths) brasileiras com atributos demográficos, psicográficos e comportamentais realistas"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faker>=21.0.0",
    "jsonschema>=4.20.0",
    "rich>=13.0.0",
    "duckdb>=0.9.0",
    "typer>=0.9.0",
    "loguru>=0.7.0",
    "openai>=2.8.0",
    "openai-agents>=0.0.16",
    "Pillow>=10.0.0",
    "requests>=2.31.0",
    "pdfplumber>=0.11.0",
    "tenacity>=8.0.0",
    "reportlab>=4.0.0",
    "jinja2>=3.1.0",
    # REST API
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[project.scripts]
synthlab = "synth_lab.__main__:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []
