[project]
name = "synth-lab"
version = "0.1.0"
description = "Gerador de personas sintéticas (Synths) brasileiras com atributos demográficos, psicográficos e comportamentais realistas"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faker>=21.0.0",
    "jsonschema>=4.20.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "loguru>=0.7.0",
    "openai>=2.8.0",
    "openai-agents>=0.0.16",
    "Pillow>=10.0.0",
    "requests>=2.31.0",
    "pdfplumber>=0.11.0",
    "tenacity>=8.0.0",
    # REST API
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    # Simulation (Monte Carlo, region analysis)
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "kneed>=0.8.0",  # Knee point detection for elbow method
    # Analysis (SHAP explainability) - requires numba>=0.61.0 for Python 3.13
    "shap>=0.46.0",
    "numba>=0.61.0",
    # Observability (Phoenix/OpenTelemetry)
    "arize-phoenix>=5.0.0",
    "arize-phoenix-otel>=0.6.0",
    "openinference-instrumentation-openai>=0.1.0",
    "openinference-instrumentation-openai-agents>=0.1.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    # Database ORM and Migrations
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "psycopg2-binary>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[project.scripts]
synthlab = "synth_lab.__main__:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []
